--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "simple powerfull blog",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": " node index.js",
+    "test":"nodemon index.js"
   },
   "author": "",
   "license": "ISC",
