added viws and structured the code

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,15 @@
 .env
+.vscode/
+node_modules/
+dist/
+.DS_Store
+npm-debug.log
+yarn-error.log
+coverage/
+*.log
+*.env.local
+*.env.development.local
+*.env.test.local
+*.env.production.local
+*.env.*.local
+*.swp
